[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "bname"
dependencies = [
    "click==8.1.7",
    "colorama==0.4.6",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "Pygments==2.17.2",
    "rich==13.7.1",
    "shellingham==1.5.4",
    "typer==0.11.0",
    "typing_extensions==4.10.0"
]
version = "0.1"
authors = [
    { name="luengor", email="luengor@lueng.org" }
]
description = "A small tool to bulk rename files"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
bname = "bname:main"

